tests/baselines/reference/asyncAwaitWithCapturedBlockScopeVar.errors.txt
asyncAwaitWithCapturedBlockScopeVar.ts(5,17): error TS2345: Argument of type '() => number' is not assignable to parameter of type 'never'.
asyncAwaitWithCapturedBlockScopeVar.ts(13,17): error TS2345: Argument of type '() => number' is not assignable to parameter of type 'never'.
asyncAwaitWithCapturedBlockScopeVar.ts(22,17): error TS2345: Argument of type '() => number' is not assignable to parameter of type 'never'.
asyncAwaitWithCapturedBlockScopeVar.ts(27,23): error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
asyncAwaitWithCapturedBlockScopeVar.ts(31,17): error TS2345: Argument of type '() => number' is not assignable to parameter of type 'never'.


==== asyncAwaitWithCapturedBlockScopeVar.ts (5 errors) ====
    async function fn1() {
        let ar = [];
        for (let i = 0; i < 1; i++) {
            await 1;
            ar.push(() => i);
                    ~~~~~~~
!!! error TS2345: Argument of type '() => number' is not assignable to parameter of type 'never'.
        }
    }
    
    async function fn2() {
        let ar = [];
        for (let i = 0; i < 1; i++) {
            await 1;
            ar.push(() => i);
                    ~~~~~~~
!!! error TS2345: Argument of type '() => number' is not assignable to parameter of type 'never'.
            break;
        }
    }
    
    async function fn3() {
        let ar = [];
        for (let i = 0; i < 1; i++) {
            await 1;
            ar.push(() => i);
                    ~~~~~~~
!!! error TS2345: Argument of type '() => number' is not assignable to parameter of type 'never'.
            continue;
        }
    }
    
    async function fn4(): Promise<number> {
                          ~~~~~~~~~~~~~~~
!!! error TS2366: Function lacks ending return statement and return type does not include 'undefined'.
        let ar = [];
        for (let i = 0; i < 1; i++) {
            await 1;
            ar.push(() => i);
                    ~~~~~~~
!!! error TS2345: Argument of type '() => number' is not assignable to parameter of type 'never'.
            return 1;
        }
    }
    